fix: align hero background layers, center text inside mint circle badges, and add back-to-top button

--- a/style.css
+++ b/style.css
@@ -571,14 +571,6 @@ body {
     height: 398.4px;
 }
 
-#el-5-20 {
-    position: absolute;
-    left: 452.3px;
-    top: 231.0px;
-    width: 462.7px;
-    height: 645.6px;
-}
-
 #el-5-25 {
     opacity: 0.990;
     color: rgb(0, 0, 0);
